<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.quangbruder.bikecustomer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rent"
        android:name="com.quangbruder.bikecustomer.ui.rent.RentFragment"
        android:label="@string/menu_rent"
        tools:layout="@layout/fragment_rent" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.quangbruder.bikecustomer.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.quangbruder.bikecustomer.ui.history.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
</navigation>